--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
 body{
+    color : #333;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Arial";
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #666;
+    margin: 0 auto;
+}
+#container h1{
+    font-size: 20px;
 }
